# llcpp-exchange

./: .gitignore  CMakeLists.txt  README.md
Exchange/: CMakeLists.txt  exchange_main.cpp
Exchange/market_data/: market_data_publisher.cpp  market_data_publisher.h  market_update.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
Exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order.h  me_order_book.cpp  me_order_book.h  me_order_book_test.cpp  unordered_map_me_order_book.cpp  unordered_map_me_order_book.h
Exchange/order_server/: client_request.h  client_response.h  fifo_sequencer.h  order_server.cpp  order_server.h
Exchange/tests/: exchange_integration_test.cpp  fifo_sequencer_test.cpp  market_data_publisher_test.cpp  protocol_structs_test.cpp  snapshot_synthesizer_test.cpp
benchmarks/: hash_benchmark.cpp  logger_benchmark.cpp  release_benchmark.cpp
bindings/python/: CMakeLists.txt  exchange_core.cpp  trading_core.cpp
dashboard/: app.py
features/: cancellation.feature  environment.py  market_data.feature  matching.feature  order_book.feature  trading_book.feature
features/steps/: exchange_steps.py  trading_steps.py
include/: latency_tracker.h  logging.h  lq_free.h  macros.h  mcast_socket.h  mem_pool.h  opt_logging.h  opt_mem_pool.h  perf_utils.h  socket_utils.h  tcp_server.h  tcp_socket.h  thread_utils.h  time_utils.h  types.h
notebooks/: perf_analysis.py
scripts/: build.sh  run_dashboard.sh  run_tests.sh
src/: main.cpp  socket_utils.cpp  tcp_server.cpp  tcp_socket.cpp
tests/: conftest.py  test_cancellation.py  test_edge_cases.py  test_market_data.py  test_matching.py  test_order_book.py  test_performance.py
trading/: CMakeLists.txt  trading_main.cpp
trading/market_data/: market_data_consumer.cpp  market_data_consumer.h
trading/order_gw/: order_gateway.cpp  order_gateway.h
trading/strategy/: algo_type.h  feature_engine.h  liquidity_taker.cpp  liquidity_taker.h  market_maker.cpp  market_maker.h  market_order.h  market_order_book.cpp  market_order_book.h  om_order.h  order_manager.cpp  order_manager.h  position_keeper.h  risk_manager.cpp  risk_manager.h  trade_engine.cpp  trade_engine.h
trading/tests/: feature_engine_test.cpp  market_data_consumer_test.cpp  market_order_book_test.cpp  order_gateway_test.cpp  order_manager_test.cpp  position_keeper_test.cpp  risk_manager_test.cpp  trade_engine_test.cpp
